...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/hint_title"
            app:layout_constraintTop_toTopOf="parent" />

          <ImageButton
            android:id="@+id/expand_hint_list_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
...
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/component_color_hints_and_solution_summary_divider_color"
          android:visibility="@{isListExpanded? View.VISIBLE : View.GONE, default=gone}" />

        <TextView
          android:id="@+id/hints_and_solution_summary"
          style="@style/TextViewStart"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/component_color_hints_and_solution_summary_bottom_background_color"
          android:contentDescription="@{viewModel.computeHintContentDescription()}"
          android:fontFamily="sans-serif"
...
