...
  <string name="audio_dialog_offline_positive" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_cancel_button">Cancel</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="concept_card_toolbar_title">Concept Card</string>
  <string name="concept_card_one_button_text">Concept Card 1</string>
  <string name="concept_card_two_button_text">Concept Card 2</string>
  <string name="revision_card_toolbar_title">Study Guide</string>
  <string name="worked_example_question_label">Question:</string>
  <string name="worked_example_answer_label">Answer:</string>
  <string name="unsaved_exploration_dialog_title">Leave to Topic Page?</string>
...
  <string name="test_text_input_interaction_hint">Write here.</string>
  <string name="smallest_text_size_content_description">Smallest text size</string>
  <string name="largest_text_size_content_description">Largest text size</string>
  <string name="coming_soon">Coming Soon</string>
  <string name="recommended_stories">Recommended Stories</string>
  <string name="stories_for_you">Stories For You</string>
  <string name="question_player_activity_title">Practice Mode</string>
  <string name="revision_card_activity_title">Skill revision page</string>
  <string name="study_guide_activity_title">Study guide page</string>
  <string name="audio_player_seekbar_content_description">Audio progress</string>
  <string name="audio_language_icon_content_description">Change language</string>
  <string name="audio_player_on">Audio, ON</string>
  <string name="audio_player_off">Audio, OFF</string>
...
