...
    app:questionViewMarginBottom="@{@dimen/space_0dp}"
    app:questionViewMarginEnd="@{@dimen/feedback_item_question_view_margin_end}"
    app:questionViewMarginStart="@{@dimen/feedback_item_question_view_margin_start}"
    app:questionViewMarginTop="@{@dimen/feedback_item_question_view_margin_top}">

    <TextView
      android:id="@+id/feedback_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:breakStrategy="simple"
      android:fontFamily="sans-serif"
      android:minWidth="48dp"
      android:minHeight="48dp"
...
